--- a/package.json
+++ b/package.json
@@ -1,52 +1,27 @@
 {
-  "name": "dustybook",
-  "main": "expo-router/entry",
+  "name": "index.js",
   "version": "1.0.0",
+  "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll",
-    "lint": "expo lint"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "seed": "node src/models/seeds/seed.js",
+    "dev": "nodemon index.js"
   },
-  "jest": {
-    "preset": "jest-expo"
-  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.8",
-    "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
-    "expo-splash-screen": "~0.27.4",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.1",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-sqlite-storage": "^6.0.1",
-    "react-native-web": "~0.19.10",
-    "expo-sqlite": "~14.0.3",
-    "@react-native-async-storage/async-storage": "1.23.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
-    "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.2",
-    "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "@sequelize/core": "^7.0.0-alpha.41",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.10.0",
+    "permit": "^0.2.4",
+    "pg": "^8.11.5",
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
+  }
 }
